ui: update margins to fix spacing

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -46,7 +46,7 @@
 }
 
 #unit_detail{
-  margin: 20px;
+  margin: 1.7em 10px;
   width: 90%;
   min-width: 20em;
   max-width: 30em;
